--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.3.7",
     "gatsby-plugin-sitemap": "^2.2.24",
+    "gatsby-remark-audio": "^1.0.2",
     "gatsby-remark-copy-linked-files": "^2.1.33",
+    "gatsby-remark-embed-video": "^3.1.1",
     "gatsby-remark-images": "^3.1.37",
+    "gatsby-remark-video": "^1.2.5",
     "gatsby-source-filesystem": "^2.1.42",
     "gatsby-transformer-remark": "^2.6.42",
     "graphql": "^14.5.8",
